documentation/versioned_docs/version-5.5.x/blogs.md
---
id: blogs
title: Blogs and Articles on Kotest
sidebar_label: Blogs and Articles
---



These blogs and articles can be useful in addition to the official docs to show how people are using Kotest in the wild.

* [Best Practices Unit Testing Kotlin by Phauer (2020)](https://phauer.com/2018/best-practices-unit-testing-kotlin/)
* [Testing Koin applications with Kotest by LeoColman (2020)](https://dev.to/kotest/testing-koin-applications-with-kotlintest-1iip)
* [Writing reusable tests with Kotest's test factory by LeoColman (2020)](https://dev.to/kotest/writing-reusable-tests-with-kotest-s-test-factory-5gi)
* [Testing a Spring Boot application with Kotest by LeoColman(2020)](https://dev.to/kotest/testing-a-spring-boot-application-with-kotlintest-pgd)
* [Data driven testing with Kotest by sksamuel (2020)](https://proandroiddev.com/data-driven-testing-with-kotlintest-a07ac60e70fc)
* [Android Spec Testing by Zuhaib Ahmad (2019)](https://www.zuhaibahmad.com/android-spec-testing/)
* [Introducing the KotlinTest IntelliJ Plugin by sksamuel (2019)](https://proandroiddev.com/introducing-the-kotlintest-intellij-plugin-cf8005e9177a)
* [KotlinTest BehaviorSpec by Ben (2020)](https://www.nerd.vision/post/kotlintest-behaviorspec)
* [Kotlintest 3 release Android by Do u even code (2018)](http://www.douevencode.com/articles/2018-05/kotlintest-3-release-android/)
* [What's new in KotlinTest 3.2 and 3.3 by sksamuel (2019)](https://proandroiddev.com/whats-new-in-kotlintest-3-2-and-3-3-affbc1b25e1d)
* [KotlinTest and property-based testing by  Biju Kunjummen (2017)](https://dzone.com/articles/kotlintest-and-property-based-testing)
* [Kotest migration guide by Paweł Weselak (2020)](https://pawelweselak.com/posts/kotest-migration-guide/)
* [Micronaut and KotlinTest by Ben (2020)](https://www.nerd.vision/post/micronaut-and-kotlintest)
* [Parameterized tests with Kotest (2020)](https://kotlintesting.com/kotest-parameterized/)
* [Using Testcontainers with Micronaut and Kotest (2020)](https://akobor.me/posts/using-testcontainers-with-micronaut-and-kotest)
* [Property-based testing in Android - are we testing like it's 1999? (2020)](https://www.droidcon.com/media-detail?video=491022325)
* [How To Write Human-Readable Tests in Kotlin With Kotest and MockK (2021)](https://betterprogramming.pub/how-to-write-human-readable-tests-in-kotlin-with-kotest-and-mockk-1b614da32148)
* [Backend testing taxonomy - Scopes and Techniques (2021)](https://www.47deg.com/blog/backend-testing-taxonomy-scopes-and-techniques/#backend-testing-taxonomy-scopes-and-techniques-0)
* [What If Kotest Had HTML Reports? (2021)](https://hugomartins.io/essays/2021/03/what-if-kotest-had-html-reports/)
* [From TDD to PBT via Kotest](https://garthgilmour.medium.com/from-tdd-to-pbt-via-kotest-621957e58764)
* [Kotlin Multiplatform library with Kotest and Gradle Version Catalog](https://blog.devgenius.io/kotlin-multiplatform-library-with-kotest-and-gradle-version-catalog-23861a6f1bb1)
* [Kotlin Assertion Libraries - Kotest](https://www.novatec-gmbh.de/blog/kotlin-assertion-libraries-kotest-assertions/)
* [Introduction to Kotest at Baeldung](https://www.baeldung.com/kotlin/kotest)

Please open a PR to add your blog or article here.
